--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Stencil Component Starter</title>
 
   <script type="module" src="build/mycomponent.esm.js"></script>
-  <script nomodule src="build/mycomponent.js"></script>
+  <script nomodule src="build/mycomponent.js" data-resources-url="https://psmyrdek.github.io/stencil-alpha-demo/"></script>
 
 </head>
 
