--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
 
 <body>
 
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <valid-component></valid-component>
+  <invalid-component></invalid-component>
 
 </body>
 
