Revert "Updated docs"
This reverts commit 001b7de95ac4bf1bae417232250f0ab584c4214c.

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,7 @@
 
 <body>
 
-  <valid-component></valid-component>
-  <invalid-component></invalid-component>
+  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
 
 </body>
 
